# trajectoryRL

./: .dockerignore  .env.example  .env.miner.example  .env.validator.example  .gitattributes  .gitignore  .gitmodules  DATASET_v0.1.md  DATASET_v0.md  INCENTIVE_MECHANISM.md  LICENSE  MINER.md  MINER_GUIDE_S1.md  MINER_OPERATIONS.md  README.md  VALIDATOR_OPERATIONS.md  docker-compose.yml  docker-compose.yml.old  eval_parallel_test.py  pack.json  pyproject.toml  requirements.txt
.github/scripts/: validate_score_file.py
.github/workflows/: build-validator.yml  validate-score-pr.yml
community/feedback/: project-nobi-season1-feedback.md
docker/: Dockerfile.miner  Dockerfile.validator  README.md  docker-compose.miner.yml  docker-compose.parallel-test.yml  docker-compose.validator-dev.yml  docker-compose.validator-staging.yml  docker-compose.validator.yml  entrypoint-validator.sh
docs/: API.md  EVALUATION_S1.md  INCENTIVE_MECHANISM.md  MINER_GUIDE.md  MINER_OPERATIONS.md  SCORING_AND_EVALUATION.md  VALIDATOR_OPERATIONS.md
docs/legacy/: INCENTIVE_MECHANISM_v5.2.md
docs/seasons/: self_learning_s1.md
docs/zh-CN/: GLOSSARY.md  INDEX.md  MINER_OPERATIONS.md  README.md  TRANSLATION_STATUS.md  VALIDATOR_OPERATIONS.md
examples/: score_publish_example.py
internal_doc/: clawbench_v2_sandbox_architecture.md
legacy/: VALIDATOR_OPERATIONS.md
neurons/: miner.py  validator.py
scripts/: eval_miners.py  eval_pack.py  eval_single_miner.py  scan_validators.py  setup.sh  test_cas.py  test_judge.py  test_llm_judge.py
seasons/: dynamic_scenarios_proposal.md  scenario_architecture.md  self_learning_s1.md
tests/: sample_pack.json  test_default_mode.py  test_eval_snapshot.py  test_llm_judge_formatting.py  test_miner.py  test_miner_eval.py  test_ncd.py  test_pack_ownership.py  test_real_validator_upload.py  test_s1_e2e.py  test_sandbox_harness.py  test_spec_registry.py  test_spec_resolution.py  test_validator.py  test_version_check.py
tools/: TOOLS.md  analyze_consensus.py  analyze_validator.py
trajectoryrl/: __init__.py
trajectoryrl/base/: miner.py  validator.py
trajrl/: README.md  pyproject.toml
trajrl/tests/: test_display.py
trajrl/trajrl/: cli.py  display.py
(+35 files in other folders)
